# btcc-miner

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs
.config/: config.toml
docs/: README.md  mining_algorithm.md  stratum_protocol.md
src/: config.rs  job.rs  main.rs  stratum.rs
src/gpu/: cuda_impl.rs  metal_impl.rs  mod.rs  opencl_impl.rs  sha256d_kernel.cu  stub.rs
