[package]
name = "btcc_rust_stratum_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
num_cpus = "1"
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
metal-gpu = ["metal", "objc"]
cuda-gpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
