[package]
name = "btcc_miner"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
num_cpus = "1"
toml = "0.5"
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
ocl = { version = "0.19", optional = true }

[features]
# OpenCL: cross-platform (Linux / Windows / macOS), all GPU vendors (NVIDIA / AMD / Intel)
default = ["opencl-gpu"]
# CUDA: Linux / Windows, NVIDIA only, best performance
cuda-gpu = []
# Metal: macOS only, Apple Silicon + AMD
metal-gpu = ["metal", "objc"]
# OpenCL backend
opencl-gpu = ["ocl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
